--- a/api/package.json
+++ b/api/package.json
@@ -14,5 +14,16 @@
         "managraph",
         "database",
         "instance management"
-    ]
+    ],
+    "main": "dist/server",
+    "scripts": {
+        "build": "tsc",
+        "prestart": "npm run build",
+        "start": "node ."
+    },
+    "devDependencies": {
+        "@tsconfig/node14": "^1.0.0",
+        "@types/node": "^14.14.36",
+        "typescript": "^4.2.3"
+    }
 }
