--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
         "email": "bmarkovic17@outlook.com"
     },
     "version": "0.0.1",
+    "type": "module",
     "repository": {
         "type": "git",
         "url": "https://github.com/bmarkovic17/managraph.git"
@@ -17,6 +18,8 @@
     ],
     "main": "dist/server",
     "scripts": {
+        "lint": "eslint . --ext .ts",
+        "prebuild": "npm run lint",
         "build": "tsc",
         "prestart": "npm run build",
         "start": "node ."
@@ -24,6 +27,13 @@
     "devDependencies": {
         "@tsconfig/node14": "^1.0.0",
         "@types/node": "^14.14.36",
+        "@typescript-eslint/eslint-plugin": "^4.19.0",
+        "@typescript-eslint/parser": "^4.19.0",
+        "eslint": "^7.22.0",
+        "eslint-config-standard": "^16.0.2",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^4.3.1",
         "typescript": "^4.2.3"
     }
 }
