--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     ],
     "main": "dist/server",
     "scripts": {
+        "prepare": "cd .. && husky install api/.husky",
         "lint": "eslint . --ext .ts",
         "prebuild": "npm run lint",
         "build": "tsc",
@@ -34,6 +35,7 @@
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^4.3.1",
+        "husky": "^5.2.0",
         "typescript": "^4.2.3"
     }
 }
