--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,9 @@
     },
     "version": "0.0.1",
     "type": "module",
+    "engines": {
+        "node": ">=15.3.0"
+    },
     "repository": {
         "type": "git",
         "url": "https://github.com/bmarkovic17/managraph.git"
@@ -27,6 +30,7 @@
     },
     "devDependencies": {
         "@tsconfig/node14": "^1.0.0",
+        "@types/express": "^4.17.11",
         "@types/node": "^14.14.36",
         "@typescript-eslint/eslint-plugin": "^4.19.0",
         "@typescript-eslint/parser": "^4.19.0",
@@ -37,5 +41,8 @@
         "eslint-plugin-promise": "^4.3.1",
         "husky": "^5.2.0",
         "typescript": "^4.2.3"
+    },
+    "dependencies": {
+        "express": "^4.17.1"
     }
 }
