--- a/api/package.json
+++ b/api/package.json
@@ -44,6 +44,7 @@
     },
     "dependencies": {
         "dotenv": "^8.2.0",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "neo4j-driver": "^4.2.3"
     }
 }
