--- a/api/package.json
+++ b/api/package.json
@@ -43,6 +43,7 @@
         "typescript": "^4.2.3"
     },
     "dependencies": {
+        "camelcase": "^6.2.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "neo4j-driver": "^4.2.3"
