--- a/api/package.json
+++ b/api/package.json
@@ -46,6 +46,7 @@
         "camelcase": "^6.2.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "nanoid": "^3.1.22",
         "neo4j-driver": "^4.2.3"
     }
 }
