--- a/api/.eslintrc.yml
+++ b/api/.eslintrc.yml
@@ -3,12 +3,14 @@ env:
   node: true
 extends:
   - standard
+  - plugin:mocha/recommended
 parser: '@typescript-eslint/parser'
 parserOptions:
   ecmaVersion: 12
   sourceType: module
 plugins:
   - '@typescript-eslint'
+  - mocha
 rules:
   semi:
     - error
