--- a/api/package.json
+++ b/api/package.json
@@ -22,9 +22,10 @@
     "main": "dist/api",
     "scripts": {
         "prepare": "cd .. && husky install api/.husky",
-        "lint": "eslint . --ext .ts",
+        "lint": "eslint src/**/* && eslint test/**/*",
         "prebuild": "npm run lint",
         "build": "tsc",
+        "test": "mocha",
         "prestart": "npm run build",
         "start": "node ."
     },
@@ -37,9 +38,11 @@
         "eslint": "^7.22.0",
         "eslint-config-standard": "^16.0.2",
         "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-mocha": "^8.1.0",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^4.3.1",
         "husky": "^5.2.0",
+        "mocha": "^8.3.2",
         "typescript": "^4.2.3"
     },
     "dependencies": {
