Add controllers and swagger

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "module": "ESNext",
     "moduleResolution": "node",
     "noImplicitReturns": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": [ "src/**/*" ]
 }
