--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     ],
     "main": "dist/api",
     "scripts": {
-        "prepare": "cd .. && husky install api/.husky",
+        "prepare": "husky install && husky add .husky/pre-commit \"npm run build && npm run test\"",
         "lint": "eslint src/**/* && eslint test/**/*",
-        "prebuild": "npm run lint",
+        "prebuild": "concurrently \"npm run lint\" \"tsoa spec-and-routes\"",
         "build": "tsc",
         "test": "mocha",
         "prestart": "npm run build",
@@ -34,8 +34,10 @@
         "@tsconfig/node14": "^1.0.0",
         "@types/express": "^4.17.11",
         "@types/node": "^14.14.36",
+        "@types/swagger-ui-express": "^4.1.2",
         "@typescript-eslint/eslint-plugin": "^4.19.0",
         "@typescript-eslint/parser": "^4.19.0",
+        "concurrently": "^6.0.0",
         "eslint": "^7.22.0",
         "eslint-config-standard": "^16.0.2",
         "eslint-plugin-import": "^2.22.1",
@@ -51,6 +53,8 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "nanoid": "^3.1.22",
-        "neo4j-driver": "^4.2.3"
+        "neo4j-driver": "^4.2.3",
+        "swagger-ui-express": "^4.1.6",
+        "tsoa": "^3.6.1"
     }
 }
