--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@tsconfig/node14": "^1.0.0",
         "@types/cors": "^2.8.10",
         "@types/express": "^4.17.11",
+        "@types/morgan": "^1.9.2",
         "@types/node": "^14.14.36",
         "@types/swagger-ui-express": "^4.1.2",
         "@typescript-eslint/eslint-plugin": "^4.19.0",
@@ -55,6 +56,7 @@
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "morgan": "^1.10.0",
         "nanoid": "^3.1.22",
         "neo4j-driver": "^4.2.3",
         "swagger-ui-express": "^4.1.6",
